@@ -382,6 +382,7 @@ If upgrading from an older release, see the file UPGRADE;
 === RC2 fixes ===
 
 * (bug 65) Fix broken interwiki link encoding on Latin-1 wikis; force to UTF-8
+* (bug 563) Fix UTF-8 interwiki URL redirects via Latin-1 wikis
 
 
 === Caveats ===
